--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "html-loader": "^5.1.0"
+    "html-loader": "^5.1.0",
+    "webpack": "^5.99.7"
   }
 }
